@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-12-07T01:25:09Z",
+  "timestamp" : "2022-12-07T08:21:36Z",
   "count_outdated" : 258,
   "uniques_outdated" : 97,
-  "count" : 264,
-  "uniques" : 102,
+  "count" : 266,
+  "uniques" : 103,
   "clones" : [
     {
       "timestamp": "2022-11-23T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-11-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
