@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 2,
+  "count": 8,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-11-23T00:00:00Z",
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-11-28T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
